--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,27 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
         applicationId "com.nextgentele.dmrc"
         minSdkVersion 22
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        ndk {
-            abiFilters 'armeabi','arm64-v7a', 'x86_64', 'x86', 'mips','armeabi-v7a'
+//        ndk {
+//            abiFilters 'armeabi','arm64-v7a', 'x86_64', 'x86', 'mips','armeabi-v7a'
+//        }
+        splits {
+            abi {
+                enable true
+                reset()
+                include 'armeabi','armeabi-v7a','x86','x86_64','arm64-v8a'
+                universalApk true
+            }
         }
     }
 
